--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "opencpn-libs"]
 	path = opencpn-libs
 	url = https://github.com/opencpn/opencpn-libs.git
+[submodule "netcdf-cxx4"]
+	path = netcdf-cxx4
+	url = https://github.com/Unidata/netcdf-cxx4.git
