--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "netcdf": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "ctime": "cpp"
     }
 }
