--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,15 @@ if (NOT ${BUILD_TYPE} STREQUAL "flatpak")
 
 endif ()
 
+add_subdirectory("opencpn-libs/sqlite")
+target_link_libraries(${CMAKE_PROJECT_NAME} ocpn::sqlite)
+add_subdirectory("opencpn-libs/SQLiteCpp")
+target_link_libraries(${CMAKE_PROJECT_NAME} ocpn::sqlite_cpp)
+add_subdirectory("opencpn-libs/curl")
+target_link_libraries(${CMAKE_PROJECT_NAME} ocpn::libcurl)
+add_subdirectory("opencpn-libs/wxcurl")
+target_link_libraries(${CMAKE_PROJECT_NAME} ocpn::wxcurl)
+
 configure_file(
   ${CMAKE_SOURCE_DIR}/config.h.in ${CMAKE_BINARY_DIR}/include/config.h
   @ONLY
