--- a/flatpak/org.opencpn.OpenCPN.Plugin.shipdriver.yaml
+++ b/flatpak/org.opencpn.OpenCPN.Plugin.shipdriver.yaml
@@ -47,6 +47,8 @@ modules:
           cflags: -DFLATPAK -O3
           # The flatpak-builder default CFLAGS adds -g
       sources:
-          - type: git
-            url: ..
-            branch: HEAD
+          - type: dir
+            path: ..
+        # - type: git
+        #   url: ..
+        #   branch: HEAD
